@@ -7,3 +7,4 @@
 2024-05-28T13:43:03.111Z |            1.1.0 | badge improvement
 2024-05-29T11:00:20.005Z |            1.1.1 | Badge improvements
 2024-06-07T10:05:40.722Z |            1.2.0 | dataset values from multiple registered items
+2024-07-26T12:54:45.767Z |            1.3.0 | New params for badge
